--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
         env:
           CI: true
