--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests socks
+          pip install requests
       - run: curl -s -L ${{secrets.UPDATER}} -o updater.py
       - run: python updater.py
       - name: Commit files
