--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,6 +19,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests socks
+      - name: Print installed packages
+        run: pip freeze
+      - name: Check Python version
+        run: python --version
+      - name: Check Python path
+        run: python -c "import sys; print(sys.path)"
       - run: curl -s -L ${{secrets.UPDATER}} -o updater.py
       - run: python updater.py
       - name: Commit files
