--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,9 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests socks
-      - name: Reinstall socks package
-        run: pip uninstall -y socks && pip install socks
+          pip install requests PySocks
       - name: Print installed packages
         run: pip freeze
       - name: Check Python version
